--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -45,7 +45,7 @@
     <article>
 
       <div class="term-description">
-        <p>Digital editions are delivered in a range of sizes fit to the aspect ratio of select screens appropriate to the composition of the original artwork. Seventy (70) per cent of the purchase price is directed to wildlife conservation projects partnered with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Les &eacute;ditions num&eacute;riques sont livr&eacute;es dans une gamme de tailles adapt&eacute;es au rapport d'aspect des &eacute;crans qui conviennent &agrave; la composition de l'&#156;uvre originale. Soixante-dix pour cent du prix d'achat est affect&eacute; &agrave; des projets de conservation de la nature en partenariat avec des sc&egrave;nes chez Animat Habitat.</font></p>
+        <p>Digital editions are delivered as a full resolution copy of the original artwork as well as a bundle of common screen sizes appropriate to the composition of the original artwork. Seventy (70) per cent of the purchase price is redirected to wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Les &eacute;ditions num&eacute;riques sont livr&eacute;es sous la forme d'une copie pleine r&eacute;solution de l'&#156;uvre originale ainsi que d'un ensemble de tailles d'écran courantes des &eacute;crans adapt&eacute;es &agrave; la composition de l'&#156;uvre originale. Soixante-dix pour cent du prix d'achat est redirig&eacute; aux projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
       </div>
 
     </article><br class="clear">
