--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -43,7 +43,7 @@
   <section class="single">
     <article>
       <div class="term-description">
-        <p>Limited edition archival pigment prints are numbered and are signed by Dane Aleksander. Open edition archival pigment prints are not numbered and are not signed. Fifty (50) per cent of the purchase price of each gicl&eacute;e edition is directed to wildlife conservation projects partnered with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Tirages pigmentaires d'archives en &eacute;dition limit&eacute;e sont num&eacute;rot&eacute;s et sont sign&eacute;s par Dane Aleksander. Tirages pigmentaires d'archives en &eacute;dition ouverte ne sont pas num&eacute;rot&eacute;s et ne sont pas sign&eacute;s. Cinquante pour cent du prix d'achat de chaque &eacute;dition gicl&eacute;e est affect&eacute; &agrave; des projets de conservation de la nature en partenariat avec des sc&egrave;nes chez Animat Habitat.</font></p>
+        <p>Limited edition archival pigment prints are numbered and are signed by Dane Aleksander. Open edition archival pigment prints are not numbered and are not signed. Fifty (50) per cent of the purchase price of each limited or open edition gicl&eacute;e is redirected to wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Tirages pigmentaires d'archives en &eacute;dition limit&eacute;e sont num&eacute;rot&eacute;s et sont sign&eacute;s par Dane Aleksander. Tirages pigmentaires d'archives en &eacute;dition ouverte ne sont pas num&eacute;rot&eacute;s et ne sont pas sign&eacute;s. Cinquante pour cent du prix d'achat de chaque gicl&eacute;e en &eacute;dition limit&eacute;e ou ouverte est redirig&eacute; aux projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
       </div>
 
     </article><br class="clear">
@@ -64,7 +64,7 @@
 
           <a href="isilo/"><h5 class="woo-title">Isilo</h5></a>
           <h5 class="woo-description">Tembe Elephant Park, South Africa</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -75,7 +75,7 @@
             </div></a>
           <a href="kamboyo/"><h5 class="woo-title">Kamboyo</h5></a>
           <h5 class="woo-description">Tsavo Conservation Area, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <!-- <li class="product type-product post-1507 has-post-thumbnail">
@@ -85,7 +85,7 @@
             </div></a>
           <a href="masthulele/"><h5 class="woo-title">Masthulele</h5></a>
           <h5 class="woo-description">Kruger National Park, South Africa</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <!-- <li class="product type-product post-1508 has-post-thumbnail">
@@ -95,7 +95,7 @@
             </div></a>
           <a href="one-ton/"><h5 class="woo-title">One Ton</h5></a>
           <h5 class="woo-description">Chyulu Hills National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <li class="product type-product post-1506 has-post-thumbnail">
@@ -109,7 +109,7 @@
 
           <a href="satao/"><h5 class="woo-title">Satao</h5></a>
           <h5 class="woo-description">Tsavo East National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -124,7 +124,7 @@
 
           <a href="tim/"><h5 class="woo-title">Tim</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -139,7 +139,7 @@
 
           <a href="craig/"><h5 class="woo-title">Craig</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
