--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -80,7 +80,7 @@
         <h5 class="linebreak title" id="delivery"><b>2.2</b> Methods of Delivery</h5>
         <p>Shipping within Canada is included in the list price by default. Additional delivery costs are clearly displayed where International shipping is applicable and are included in the sum total.</p>
 
-        <p class="linebreak">Delivery outside Canada is limited to the following listed nations.</p>
+        <p class="linebreak">Delivery is limited to the following listed nations.</p>
 
         <div>
           <h6 class="title">Europe</h6>
@@ -92,7 +92,8 @@
 
           <h6 class="linebreak title">North America</h6>
           <ul class="square">
-            <li>United States</li>
+            <li>Canada</li>
+            <li>United States of America</li>
 
           </ul>
 
