--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -118,7 +118,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><font class="color text-quote">&ldquo;</font><font class="thin">The wild animals always have no comment.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Les animaux sauvages n’ont toujours pas de commentaire.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jon Mooallem (2014), <em>Wild Ones: A Sometimes Dismaying, Weirdly Reassuring Story About Looking at People Looking at Animals in America</em>, p. 8. Penguin Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><font class="thin">The wild animals always have no comment.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Les animaux sauvages n’ont toujours pas de commentaire.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jon Mooallem (2014), <em>Wild Ones: A Sometimes Dismaying, Weirdly Reassuring Story About Looking at People Looking at Animals in America</em>, p&nbsp;8. Penguin Books</font></h4>
 
         <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">The good Earth&mdash;we could have saved it, but we were too damn cheap and lazy.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">La bonne Terre&mdash;nous aurions pu la sauver, mais nous &eacute;tions sacr&eacute;ment ignoble et fain&eacute;ant.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Kurt Vonnegut, <em>A Man Without a Country</em> (2005)</font><h4> -->
 
