--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <p class="linebreak small">Incorporated in Canada as not-for-profit organization #942675-2&mdash;&ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="societas/" title="Animat Habitat societ&#257;s.">Member Handbook</a>.<font class="fr">&nbsp;&#92;&nbsp;Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif &mdash; le nom de l'organisation est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le manuel des membres.</font></p>
 
-        <p class="linebreak small">Thank you for your time.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre temps.</font></p>
+        <!-- <p class="linebreak small">Thank you for your time.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre temps.</font></p> -->
 
         <p class="linebreak small">Copyright &copy; 2015-2023 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access.">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
 
