--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -74,62 +74,61 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Nature is beautiful, and artists who paint and photograph nature celebrate its gorgeous wonders. Nature, however, has its dark side: suffering and dying are part of reality for all living things. But the rate and degree of this in nature have been augmented by man’s actions, causing an alarming depletion of ecosystems and endangering the survival of entire species.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman. (2010) <em>New Works</em>, Artist's Statement p. 22. Greystone Books.</font></h4>
-      </div>
-
-      <div>
-        <h3 class="linebreak">Change at Home</h3>
-        <p><em>Change starts at home.</em> It is in our power to encourage eco-friendly practices in our own communities, to help mitigate the collective human impact on the environment on a local scale, and to live more resourcefully on an individual basis. As we focus on making the best, and not simply the most, of the land we hold now, we can take the next steps together to make life sustainable for the generations to come.</p>
-
-        <p class="linebreak">We can help simply by not continuing to uphold a system that chooses short-term, clear-cut-and-run profits over sustainable harvests. We can help by leaving some habitats as wilderness. We need to help by saving space for forests and jungles and waterways. Earth needs to have ecosystems that exist apart from people and away from the cities that have been raised on the natural resources that surround them.</p>
-
-        <p class="linebreak">We can help by working to sustain natural ecosystems at home. We can make our cities less emissive. We can make our industries less of a pollutant. We can make an effort to be less wasteful. From the distance of a city contributing to a global crisis, we can start by striving to build our hometown better. This is one way our cities &ndash; and we the people in them &ndash; can stay in balance with the wild places where we choose not to exist. In so doing&mdash;in saving the wild places on Earth, people stand to benefit immeasurably.</p>
-
-        <p class="linebreak">It is in this balance that our wild places can sustain human life with clean air and fresh water. The more we are aware of what we have &ndash; and of the value of what we have &ndash; both in terms of community and economy, the more we are going to be aware of what these wild places need and the better we can take care of what we have already taken.</p>
-
-        <p class="linebreak"><em>Lust for ivory must end.</em> We can help by simply reconsidering what holds value in our lives. No example is more poignant than the seemingly archaic market for ivory trinkets. The poachers who kill more than thirty-thousand elephants each year forego long-term ecological and communal benefits in exchange for short-term gain to the benefit of a small group of criminals. Instead of such unworthy artifacts as ivory trinkets, we can help by upholding beauty in nature: a wonderful world with elephants.</p>
-
-        <p class="linebreak">In the lead up to the release of <em>White Elephant</em>, Animat Habitat aims to research conservation efforts on the ground in Africa, and to maintain a more complete listing of wildlife conservation parks and projects in a section of the website dedicated to information and resources. Here are a sample of summaries of forward-thinking foundations doing positive work for elephants, with an admitted bias to those that have provided further information on the Internet.</p>
-      </div>
-
-      <div>
-        <h4>African Impact</h4>
-        <p>African Impact hosts a range of conservation volunteering across south-west Africa, including a hands-on elephant and rhino program in <a title="African Impact / Hands-on Wildlife Conservation Project" href="../../../url/-com/africanimpact-hands-on-elephant-rhino-and-wildlife-conservation-project" target="_blank" rel="noopener">Zimbabwe</a>. The emphasis is wildlife conservation, with time spent in the game park as well as educating the community on the importance of the environment and its wildlife. <a title="African Impact / Conservation Volunteering" href="../../../url/-com/africanimpact-conservation-volunteering/" target="_blank" rel="noopener">Volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="African Impact">2</a>]</sup></p>
-
-      </div>
-
-      <div>
-        <h4>David Shepherd Wildlife Foundation</h4>
-        <p>DSWF fund anti-poaching teams and undercover investigations into criminal networks, &ldquo;to protect wildlife species and to establish a sustainable future for them in the wild.&rdquo; David Shepherd and other leading wildlife artists sell <a title="David Shepherd / Shop" href="../../../url/-org/davidshepherd-shop/" target="_blank" rel="noopener">prints and gift cards</a> on the site to help fund the foundation. Good idea!<sup>&nbsp;[<a class="button" onclick="fn();" title="DSWF">3</a>]</sup></p>
-
-      </div>
-
-      <div>
-        <h4>International Elephant Foundation</h4>
-        <p>IEF are working in <a href="../../../url/-org/elephantconservation-mounted-horse-patrol-anti-poaching-kenya/" title="IEF / Anti-poaching, Kenya" target="_blank" rel="noopener">Kenya</a>, <a href="../../../url/-org/elephantconservation-minimize-illegal-killing-of-elephants/" title="IEF / Minimize Illegal Killing, Kenya and Tanzania" target="_blank" rel="noopener">Tanzania</a>, <a href="../../../url/-org/elephantconservation-conservation-of-elephants-uganda/" title="IEF / Conservation of Elephants, Uganda" target="_blank" rel="noopener">Uganda</a> and <a href="../../../url/-org/elephantconservation-village-scout-support-lower-zambezi/" title="IEF / Village Scout Support, Lower Zambezi" target="_blank" rel="noopener">Lower Zambezi</a> to increase the presence of security personnel for elephant monitoring and anti-poaching projects within the Serengeti ecosystem. Their vision is to create a sustainable future for elephants, by linking people and elephants for their mutual long-term benefit.<sup>&nbsp;[<a class="button" onclick="fn();" title="IEF">4</a>]</sup></p>
-
-      </div>
-
-      <div>
-        <h4>Elephant-Human Relations Aid</h4>
-        <p>EHRA enables volunteers to reduce conflict between elephants and humans through movement monitoring, data management, water protection and education programs. The <a title="EHRA / Desert Elephants, Namibia" href="../../../url/-org/ehranamibia-elephant-conservation/" target="_blank" rel="noopener">Namibia-based</a> team take great interest in the desert elephants, and if you too are ready for an adventure in the Africa: <a title="EHRA / Wildlife Volunteer" href="../../../url/-org/ehranamibia-volunteer-with-elephants-namibia/" target="_blank" rel="noopener">volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="EHRA">5</a>]</sup></p>
-
-      </div>
-
-      <div>
-        <p>Find a more complete list of wildlife conservation parks and projects in <a href="../../../conservatum/africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa &ndash;&nbsp;Afrique.">Africa</a>.</p>
+        <h4><font class="color text-quote">&ldquo;</font><em>Nature is beautiful, and artists who paint and photograph nature celebrate its gorgeous wonders. Nature, however, has its dark side: suffering and dying are part of reality for all living things. But the rate and degree of this in nature have been augmented by man’s actions, causing an alarming depletion of ecosystems and endangering the survival of entire species.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman. (2010) <em>New Works</em>, Artist's Statement p&nbsp;22. Greystone Books.</font></h4>
       </div>
 
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a title="Mark Deeble" href="../../../url/wp/markdeeble/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> African Impact. <a title="African Impact" href="../../../url/-com/africanimpact/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>3</sup> David Shepherd Wildlife Foundation. Fighting wildlife crime. <a title="David Shepherd / Fighting Wildlife Crime" href="../../../url/-org/davidshepherd-fighting-wildlife-crime/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> International Elephant Foundation. <a title="International Elephant Foundation" href="../../../url/-org/elephantconservation/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>5</sup> Elephant-Human Relations Aid. <a title="Elephant-Human Relations Aid" href="../../../url/-org/ehranamibia/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a href="../../../url/wp/markdeeble/" title="Mark Deeble" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
+      </div>
+
+      <div class="clear-top">
+        <h3 class="linebreak">Change at Home</h3>
+        <p><em>Change starts at home.</em> It is in our power to encourage eco-friendly practices in our own communities, to help mitigate the collective human impact on the environment on a local scale, and to live more resourcefully on an individual basis. As we focus on making the best, and not simply the most, of the land we hold now, we can take the next steps together to make life sustainable for the generations to come.</p>
+
+        <p class="linebreak">We can help simply by not continuing to uphold a system that chooses short-term, clear-cut-and-run profits over sustainable harvests. We can help by recognizing the damage caused by excessive and wasteful consumption. We can help by leaving some habitats as wilderness. We need to help by saving space for forests and jungles and waterways. Earth needs to have ecosystems that exist apart from people and away from the cities that have been raised on the natural resources that surround them.</p>
+
+        <p class="linebreak">We can help by working to sustain natural ecosystems at home. We can make our cities less emissive. We can make demands of our industries to be less of a pollutant of air, land and water, and less the destructive of the natural world. We can extend the efficient use of all resources. We can make an effort to be less wasteful. From the distance of a city contributing to a global crisis, we can start by striving to build our hometown better. This is one way our cities &ndash; and we the people in them &ndash; can stay in balance with the wild places where we choose not to exist. In so doing&mdash;in saving the wild places on Earth, people stand to benefit immeasurably.</p>
+
+        <p class="linebreak">It is in this balance that our wild places can sustain human life with clean air and fresh water. The more we are aware of what we have &ndash; and of the value of what we have &ndash; both in terms of community and economy, the more we are going to be aware of what these wild places need and the better we can take care of what we have already taken. The actions we take today can positively change the future for our world with elephants.</p>
+
+        <h3 class="linebreak">Change the Way We Look at Elephants</h3>
+        <p><em>Lust for ivory must end.</em> We can help by simply reconsidering what holds value in our lives. No example is more poignant than the seemingly archaic market for ivory trinkets. The poachers who kill more than thirty-thousand elephants each year forego long-term ecological and communal benefits in exchange for short-term gain to the benefit of a small group of criminals. Instead of such unworthy artifacts as ivory trinkets, we can help by upholding beauty in nature: a wonderful world with elephants.</p>
+
+        <p class="linebreak">In the lead up to the release of <em>White Elephant</em>, Animat Habitat aims to partner with conservation efforts on the ground in Africa, and to maintain a more complete listing of wildlife conservation parks and projects in a section of the website dedicated to information and resources. Here are short summaries of a small sample of forward-thinking foundations that have taken positive action for elephants, with an admitted bias to those that have provided further information on the Internet.</p>
+
+      </div>
+
+      <div>
+        <h5><a class="overscore" title="African Impact" href="../../../url/-com/africanimpact/" target="_blank" rel="noopener">African Impact</a></h5>
+        <p>African Impact hosts a range of conservation volunteering across south-west Africa, including a hands-on elephant and rhino program in <a title="African Impact / Hands-on Wildlife Conservation Project" href="../../../url/-com/africanimpact-hands-on-elephant-rhino-and-wildlife-conservation-project" target="_blank" rel="noopener">Zimbabwe</a>. The emphasis is wildlife conservation, with time spent in the game park as well as educating the community on the importance of the environment and its wildlife. <a title="African Impact / Conservation Volunteering" href="../../../url/-com/africanimpact-conservation-volunteering/" target="_blank" rel="noopener">Volunteer</a>.</p>
+
+      </div>
+
+      <div>
+        <h5><a class="overscore" title="David Shepherd / Fighting Wildlife Crime" href="../../../url/-org/davidshepherd-fighting-wildlife-crime/" target="_blank" rel="noopener">David Shepherd Wildlife Foundation</a> (DSWF)</h5>
+        <p>DSWF fund anti-poaching teams and undercover investigations into criminal networks, &ldquo;to protect wildlife species and to establish a sustainable future for them in the wild.&rdquo; David Shepherd and other leading wildlife artists sell <a title="David Shepherd / Shop" href="../../../url/-org/davidshepherd-shop/" target="_blank" rel="noopener">prints and gift cards</a> on the site to help fund the foundation. Good idea!</p>
+
+      </div>
+
+      <div>
+        <h5><a class="overscore" title="Elephant-Human Relations Aid" href="../../../url/-org/ehranamibia/" target="_blank" rel="noopener">Elephant-Human Relations Aid</a> (EHRA)</h5>
+        <p>EHRA enables volunteers to reduce conflict between elephants and humans through movement monitoring, data management, water protection and education programs. The <a title="EHRA / Desert Elephants, Namibia" href="../../../url/-org/ehranamibia-elephant-conservation/" target="_blank" rel="noopener">Namibia-based</a> team take great interest in the desert elephants, and if you too are ready for an adventure in the Africa: <a title="EHRA / Wildlife Volunteer" href="../../../url/-org/ehranamibia-volunteer-with-elephants-namibia/" target="_blank" rel="noopener">volunteer</a>.</p>
+
+      </div>
+
+      <div>
+        <h5><a class="overscore" title="International Elephant Foundation" href="../../../url/-org/elephantconservation/" target="_blank" rel="noopener">International Elephant Foundation</a> (IEF)</h5>
+        <p>IEF are working in <a href="../../../url/-org/elephantconservation-mounted-horse-patrol-anti-poaching-kenya/" title="IEF / Anti-poaching, Kenya" target="_blank" rel="noopener">Kenya</a>, <a href="../../../url/-org/elephantconservation-minimize-illegal-killing-of-elephants/" title="IEF / Minimize Illegal Killing, Kenya and Tanzania" target="_blank" rel="noopener">Tanzania</a>, <a href="../../../url/-org/elephantconservation-conservation-of-elephants-uganda/" title="IEF / Conservation of Elephants, Uganda" target="_blank" rel="noopener">Uganda</a> and <a href="../../../url/-org/elephantconservation-village-scout-support-lower-zambezi/" title="IEF / Village Scout Support, Lower Zambezi" target="_blank" rel="noopener">Lower Zambezi</a> to increase the presence of security personnel for elephant monitoring and anti-poaching projects within the Serengeti ecosystem. Their vision is to create a sustainable future for elephants, by linking people and elephants for their mutual long-term benefit.</p>
+
+      </div>
+
+      <div>
+        <p>See a more comprehensive list of wildlife conservation parks and projects in <a href="../../../conservatum/africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa &ndash;&nbsp;Afrique.">Africa</a>.</p>
+
       </div>
 
       <div class="clear">
@@ -140,7 +139,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -158,8 +157,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../technology-ar/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">What is Augmented Reality? /</font></a>
-          <a class="nav-next" href="../reference/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Reference Art P.&nbsp;1</font></a>
+          <a class="nav-previous" href="../companion-app-augmented-reality/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Augmented Reality Application /</font></a>
+          <a class="nav-next" href="../reference-art/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Reference Art &ndash; History</font></a>
         </div>
       </div>
 
