--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Ghost Elephants in Angola</em></a></li>
+      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Angola</em></a></li>
     </ul>
   </nav>
 
@@ -71,9 +71,16 @@
       </div>
 
       <div>
+        <p><em>Guardians of the River</em> (podcast, 2021) continues the conversation from National Geographic Documentary Films <em>Into the Okavango</em>. This 2018 documentary was introduced for its outstanding wildlife cinematography in an earlier broadcast: <a href="../wildlife-documentary-2/" title="Wildlife Documentary &ndash; Picture">Wildlife Documentary &ndash; Picture</a>.</p>
 
-        <p><em>Guardians of the River</em> (podcast, 2021) continues the conversation from National Geographic Documentary Films <em>Into the Okavango</em>. This 2018 documentary was introduced for its outstanding wildlife cinematography in an earlier broadcast: <a href="../technology-documentary-2/" title="Wildlife Documentary &ndash; Picture">Wildlife Documentary &ndash; Picture</a>.</p>
+      </div>
 
+      <div class="quote" id="footnotes">
+        <p class="small"><sup>1</sup> Wild Bird Trust &ndash; Okavango Wilderness Project <a href="../../../url/-com/wildbirdtrust-okavango-wilderness-project/" rel="noopener" target="_blank" title="Wild Bird Trust / Okavango Wilderness Project">Website&nbsp;Link</a></p>
+
+      </div>
+
+      <div class="clear-top">
         <h3 class="linebreak">Okavango Wilderness Project</h3>
         <p>National Geographic Documentary Films <em>Into the Okavango</em> (2018) introduced a multi-year study to serve as the scientific foundation for establishing one of the largest transfrontier protected areas in sub-Saharan Africa&mdash;spanning the four nations that share the Okavango river basin: Namibia, Botswana, Zambia, and Angola. Led by National Geographic Fellow <u>Steve Boyes</u>, the expeditions found where the river comes from &ndash; and what is happening to the water along the way &ndash; in an effort to protect the vast delta ecosystem in its entirety. <em>Steve was thinking big.</em> An interdisciplinary team of scientists and experts from the region and around the world covered fifteen thousand kilometres &ndash; from source to sand &ndash; counting and identifying wildlife.</p>
 
@@ -96,7 +103,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<em>Into the Okavango</em> (documentary, 2018)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<em>Into the Okavango</em> (documentary, 2018) National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</font></h4>
       </div>
 
       <div class="clear">
@@ -110,7 +117,7 @@
 
         <p class="linebreak">This is the story told in <em>Guardians of the River</em> (podcast, 2021). The podcast includes experts from the first expedition as well as the story behind the film, <em>Into the Okavango</em> (documentary, 2018). &ldquo;The prestige and attention of the documentary&rdquo;, Kerllen invokes in the podcast, &ldquo;transformed a ten-thousand dollar research expedition into a sixteen-million dollar, multinational conservation effort.&rdquo; National Geographic Society launched the Okavango Wilderness Project in 2017 in an effort to conserve the delta ecosystem. The project has become one of the top-most funded in the 150 year history at National Geographic Society.</p>
 
-        <p class="linebreak">We recognize the partnership of National Geographic Society and Wild Bird Trust with local communities in the Okavango watershed as a critical case for elephant conservation at a time when Angola is readying to open its borders to elephants and to the world. <font class="color">Animat Habitat has named National Geographic <a class="color" href="../../../url/-org/nationalgeographic-okavango/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project">Okavango Wilderness Project</a> (NGOWP) as an official selection to receive a percentage of revenue from scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
+        <p class="linebreak">Animat Habitat has recognized the partnership of National Geographic Society and Wild Bird Trust with local communities in the Okavango watershed as a critical case for elephant conservation at a time when Angola is readying to open its borders to elephants and to the world. <font class="color">National Geographic <a class="color" href="../../../url/-org/nationalgeographic-okavango/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project">Okavango Wilderness Project</a> (NGOWP) has been named as an official selection to receive a percentage of revenue from the first production at Animat Habitat&mdash;scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
 
       <!-- </div>
 
@@ -151,7 +158,7 @@
       </div>
 
       <div>
-        <p>The Angolan government made an incredible gesture in 2019 and investment of sixty million dollars to The HALO Trust to clear all landmines as far as they can in south-east Angola.<sup>&nbsp;[<a class="button" onclick="fn();" title="The HALO Trust">2</a>]</sup></p>
+        <p>The Angolan government made an incredible gesture in 2019 and investment of sixty million dollars to The HALO Trust to clear all landmines as far as they can in south-east Angola.<sup>&nbsp;[<a class="button" onclick="fn_3();" title="The HALO Trust">2</a>]</sup></p>
 
         <p class="linebreak">&ldquo;That is not going to happen in a year,&rdquo; warns Dr Steve Boyes in <em>Guardians of the River</em> (podcast, 2021), &ldquo;it is going to happen in five or ten years.&rdquo; The risk for human-wildlife conflict in Angola remains very high, Dr Boyes explains, &ldquo;because you do not want an elephant that is stressed out, and that will happen if you just parachute this poor thing into the upper catchments of the Okavango.&rdquo; That elephant is going to go straight to the nearest maize field, Dr Boyes further explains, &ldquo;because [the elephant] will not know where to find specialized food items that you <em>do</em> find up there.&rdquo; He suggests that by 2030, &ldquo;Angola will be a lot more ready to accept tens of thousand of elephants &ndash; the roads will be built, technology will have advanced so that we can transport them more safely &ndash; it is not the right time now.&rdquo; If Angola can first be made safe for elephants, with anti-poaching policies and training with local communities, Steve thinks elephants will return on their own. <em>No conveyor belts or helicopters required.</em></p>
 
@@ -195,8 +202,13 @@
 
       </div>
 
-      <div>
-        <h3 id="moremi-header">Guardians of the Okavango</h3>
+      <div class="quote" id="footnotes-3">
+        <p class="small"><sup>2</sup> The HALO Trust, Landmine clearance in Angola. <a href="../../../url/-org/halotrust-okavango/" rel="noopener" target="_blank" title="The HALO Trust / Landmine clearance in Angola.">Website&nbsp;Link</a></p>
+
+      </div>
+
+      <div class="clear-top">
+        <h3 class="linebreak" id="moremi-header">Guardians of the Okavango</h3>
         <p>As more land mines from the decades-long civil war are decommissioned, more roads open up, and the outside world is encroaching into the isolated communities and the surrounding wilderness in Angola. The illegal commercial bushmeat trade has picked up as a result, as have unregulated development, charcoal production and logging and so on. The legal business of tourism lodges in a national reserve, however, remains complicated for some smaller local communities. Whether or not we consider humans as part of wilderness will inform how we conserve a place, Kerllen deliberates, &ldquo;and specifically its designation.&rdquo; A national park. A wilderness area. A privately owned tourist designation. Each of these have different implications for who can live and travel within the protected region.</p>
 
         <p class="linebreak" id="moremi-toggle">History: <a class="color" onclick="toggle_moremi();">Moremi Reserve</a>.</p>
@@ -228,6 +240,7 @@
             <p class="linebreak">In 2016, the high court of Botswana recognized that historically, minority tribes were not given equal rights. Kerllen adds, &ldquo;And the court acknowledged that the WaYei were truly a separate tribe, with their own language and culture.&rdquo; Kerllen concludes that legal recognition is the first step for minority tribes to gain equality in Botswana, &ldquo;to be considered a tribe, like the BaTawana.&rdquo;</p>
 
             <p class="linebreak">Close history: <a class="color" onclick="toggle_moremi();">Moremi Reserve</a>.</p>
+
           </div>
         </div>
 
@@ -248,12 +261,6 @@
 
       </div>
 
-      <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Wild Bird Trust &ndash; Okavango Wilderness Project <a href="../../../url/-com/wildbirdtrust-okavango-wilderness-project/" rel="noopener" target="_blank" title="Wild Bird Trust / Okavango Wilderness Project">Website&nbsp;Link</a></p>
-        <p class="small"><sup>2</sup> The HALO Trust, Landmine clearance in Angola. <a href="../../../url/-org/halotrust-okavango/" rel="noopener" target="_blank" title="The HALO Trust / Landmine clearance in Angola.">Website&nbsp;Link</a></p>
-
-      </div>
-
       <div class="clear">
         <div id="register-toggle">
           <h3><a onclick="toggle_register();">&plus;</a></h3>
@@ -262,7 +269,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -281,7 +288,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-kavango/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Reconnaissance in Kavango /</font></a>
-          <!-- <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="mobile">Next Article /</font><font class="desktop">Making of Ella Ch.&nbsp;4 /</font></a> -->
+          <!-- <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="mobile">Next Article /</font><font class="desktop">Making of Ella Ch&nbsp;4 /</font></a> -->
         </div>
       </div>
 
@@ -354,6 +361,7 @@
   };
 
   function fn() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
+  function fn_3() { document.querySelector( "#footnotes-3" ).scrollIntoView({ behavior: 'smooth' }); };
 
 </script>
 
