--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Corridors in Botswana</em></a></li>
+      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Botswana</em></a></li>
     </ul>
   </nav>
 
@@ -43,7 +43,7 @@
 
       <div>
         <h4 class="letterhead thin">June 2020</h4>
-        <h2 class="scene-one">Elephants Without Borders</h2>
+        <h2 class="scene-one">Elephant Corridors</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
         <p class="linebreak"><em>Botswana has the largest number of savanna elephants in Africa today. While most African elephant populations have decreased due to poaching, urban expansion and landscape fragmentation, the elephant population in and around 115,000 square kilometres range in northern Botswana has remained stable.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al, 2017">1</a>]</sup></p>
@@ -90,16 +90,25 @@
 
       </div>
 
-      <div>
-        <h3>Kavango-Zambezi</h3>
+      <div class="clear">
+
+        <div class="quote" id="footnotes">
+          <p class="small"><sup>1</sup> Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">Download PDF</a></p>
+          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, p&nbsp;211-221. (2019) Smithsonian Books.</p>
+
+        </div>
+      </div>
+
+      <div class="clear-top">
+        <h3 class="linebreak">Kavango-Zambezi</h3>
         <p>The elephant population in northern Botswana forms part of a continuous elephant population within southern Africa, as individuals move between bordering countries: Zimbabwe, Zambia, Namibia and until recently, through to Angola. These countries comprise the Kavango-Zambezi Transfrontier Conservation Area (KAZA TFCA), one of the largest conservation areas in the world. Now, there is an increased urgency for those neighboring countries to open protected corridors so herds can return to their traditional ranges.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
-        <p class="linebreak">The reality is that elephants share the landscape with an ever-increasing human population. This conflict reflects competition not only for resources such as water and vegetation, but also for space, especially as an estimated 78 per cent of the elephant range occurs outside of national parks. The result is more frequent incidents of human-elephant conflict.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
+        <p class="linebreak">The reality is that elephants share the landscape with an ever-increasing human population. This conflict reflects competition not only for resources such as water and vegetation, but also for space, especially as an estimated 78 per cent of the elephant range occurs outside of national parks. The result is more frequent incidents of human-wildlife conflict.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p. 225. (2019) Smithsonian Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p&nbsp;225. (2019) Smithsonian Books</font></h4>
       </div>
 
       <div>
@@ -107,16 +116,25 @@
 
         <p class="linebreak">Elephants numbers in Botswana are in sharp contrast with numbers in Angola, which has fewer than 4,000 elephants in a fertile country almost double the size of Botswana. The contrast is similar with Zambia, which has only around 22,000 elephants. Yet both Zambia and Angola have vast tracks of traditional elephant habitat lying dormant and underutilized. This unbalance holds an answer to any question of whether or not Botswana can sustain its current elephant population.</p>
 
-        <p class="linebreak">This is where the Kavango-Zambezi Transfrontier Conservation Area initiative comes into the picture. KAZA is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders and covering the size of roughly France or Texas. The centre of of the area is at the confluence of the Chobe and Zambezi rivers, where the borders of Botswana, Namibia, Zambia and Zimbabwe meet. Chobe National Park, Hwange National Park, the Okavango Delta and Victoria Falls are all contained within the Transfrontier Conservation Area. The vision: &lsquo;to establish a world-class transfrontier conservation and tourism destination in the Okavango and Zambezi river basin regions [&hellip;] within the context of sustainable development.&rsquo; The crux will be whether KAZA stakeholders have the political will to open up ancient elephant corridors to connect the elephants in Botswana to those well-stocked food pantries waiting for them to the north in Nambia, Zambia and Angola. If these corridors can be recreated, it will be a win-win situation for all member countries and their rural communities.</p>
+        <p class="linebreak">This is where the KAZA TFCA initiative comes into the picture. KAZA TFCA is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders and covering the size of roughly France or Texas. The centre of of the area is at the confluence of the Chobe and Zambezi rivers, where the borders of Botswana, Namibia, Zambia and Zimbabwe meet. Chobe National Park, Hwange National Park, the Okavango Delta and Victoria Falls are all contained within the Transfrontier Conservation Area. The vision is: &lsquo;to establish a world-class transfrontier conservation and tourism destination in the Okavango and Zambezi river basin regions [&hellip;] within the context of sustainable development.&rsquo; The crux will be whether KAZA stakeholders have the political will to open up ancient elephant corridors to connect the elephants in Botswana to those well-stocked food pantries waiting for them to the north in Nambia, Zambia and Angola. If these corridors can be recreated, it will be a win-win situation for all member countries and their rural communities.</p>
 
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/geo/kavango-zambezi.map.information.jpg" />
       <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
 
-      <div>
-        <h3>Botswana Without Borders</h3>
-        <p>By 2007, Michael Chase and Kelly Landen co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the Kavango-Zambezi Transfrontier Conservation Area&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
+      <div class="clear">
+
+        <div class="quote" id="footnotes">
+          <p class="small"><sup>3</sup> Cushman, S.A., Chase, M.J., and Griffin, C. &lsquo;Elephants in space and time.&rsquo; Oikos, 109:331-341. 2005. <a href="../../../url/-org/elephantswithoutborders-elephants-in-space-and-time-pdf" title="Elephants in space and time." target="_blank" rel="noopener">Download PDF</a></p>
+          <!-- <p class="small"><sup>6</sup> Sitati and Walpole 2006; Hoare 2012; Songhurst and Coulson 2014</p> -->
+
+        </div>
+      </div>
+
+      <div class="clear-top">
+        <h3 class="linebreak">Botswana Without Borders</h3>
+        <p>By 2007, Michael Chase and Kelly Landen co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the KAZA TFCA&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
 
         <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, game fences and poaching, fires and drought and so on. Elephants, however, were bucking the trend. Chase had an explanation:</p>
 
@@ -139,7 +157,7 @@
       </div>
 
       <div>
-        <p>Botswana-based Elephants Without Borders went on to lead a ground-breaking initiative to survey elephants and animals across Africa. The results of the <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="Elephants Without Borders / Great Elephant Census" target="_blank">Great Elephant Census</a> (GEC) painted a bleak picture of the pan-African situation in 2014: fewer than 400,000 savanna elephants survived in Africa. During the previous seven years, ivory poaching had reduced elephant populations across the continent by 30 per cent. 144,000 elephants. Poaching and human-elephant conflict and habitat loss and climate change are so intense that elephant populations are shrinking by eight per cent each year, continent-wide. 28,000 elephants a year. 76 elephants a day. One elephant every 20 minutes. So it goes.</p>
+        <p>Botswana-based Elephants Without Borders went on to lead a ground-breaking initiative to survey elephants and animals across Africa. The results of the <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="Elephants Without Borders / Great Elephant Census" target="_blank">Great Elephant Census</a> (GEC) painted a bleak picture of the pan-African situation in 2014: fewer than 400,000 savanna elephants survived in Africa. During the previous seven years, ivory poaching had reduced elephant populations across the continent by 30 per cent. 144,000 elephants. Poaching and human-wildlife conflict and habitat loss and drought are so intense that elephant populations are shrinking by eight per cent each year, continent-wide. 28,000 elephants a year. 76 elephants a day. One elephant every 20 minutes. So it goes.</p>
 
         <h3 class="linebreak" id="don-pinnock-header">Today&hellip; in Botswana</h3>
 
@@ -181,7 +199,7 @@
 
         <p>The real solution is to allow these elephants safe passage to past, now underutilized, home ranges in Angola, Zambia and Zimbabwe, and safe passage back to Botswana with the change of season. The solution is to protect the wild places in the Kavango-Zambezi area for elephants. This solution calls for a reconsidered land management plan in Caprivi. This solution requires the recreation and preservation of wildlife corridors across Botswana's northern border and throughout managed farmland and so on. This solution has the potential to spark a tourism industry that can benefit local communities with revenue and employment in all five KAZA countries. Today, the future of elephants in Botswana is once again up for debate and this time there is a far reaching implication for the future of elephants in Africa.</p>
 
-        <p class="linebreak">We recognize the data collected by EWB as a fundamental support structure for elephant conservation in Botswana and across the continent. <font class="color">Animat Habitat has named <a class="color" href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a> (EWB) as an official selection to receive a percentage of revenue from scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground (and in the air) in Africa.</p>
+        <p class="linebreak">Animat Habitat has recognized the data collected by EWB as a fundamental support structure for elephant conservation in Botswana and across the continent. <font class="color"><a class="color" href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a> (EWB) was named as an official selection to receive a percentage of revenue from the first publication at Animat Habitat&mdash;scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground &ndash; and in the air &ndash; in Africa.</p>
 
         <!-- <p class="linebreak">For the latest on elephants in Botswana, we look to <a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a>.</p> -->
 
@@ -202,17 +220,6 @@
       </div>
 
       <div class="clear">
-
-        <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">Download PDF</a></p>
-          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, p. 211-221. (2019) Smithsonian Books.</p>
-          <p class="small"><sup>3</sup> Cushman, S.A., Chase, M.J., and Griffin, C. &lsquo;Elephants in space and time.&rsquo; Oikos, 109:331-341. 2005. <a href="../../../url/-org/elephantswithoutborders-elephants-in-space-and-time-pdf" title="Elephants in space and time." target="_blank" rel="noopener">Download PDF</a></p>
-          <!-- <p class="small"><sup>6</sup> Sitati and Walpole 2006; Hoare 2012; Songhurst and Coulson 2014</p> -->
-
-        </div>
-      </div>
-
-      <div class="clear">
         <div id="register-toggle">
           <h3><a onclick="toggle_register();">&plus;</a></h3>
 
@@ -220,7 +227,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -238,8 +245,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../technology-documentary-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Picture /</font></a>
-          <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Last Elephants in Caprivi</font></a>
+          <a class="nav-previous" href="../wildlife-documentary-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Lights /</font></a>
+          <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Namibia</font></a>
         </div>
       </div>
 
@@ -314,6 +321,7 @@
   };
 
   function fn() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
+  function fn_2() { document.querySelector( "#footnotes-2" ).scrollIntoView({ behavior: 'smooth' }); };
 
 </script>
 
