--- a/scene/one/elephant-conservation-kavango/index.html
+++ b/scene/one/elephant-conservation-kavango/index.html
@@ -43,7 +43,7 @@
 
       </div>
 
-        <!-- <p class="linebreak"><em>This article takes up ideas from earlier in the broadcast: Elephant Corridors in Botswana, The Last Elephants in Caprivi.</em></p> -->
+        <!-- <p class="linebreak"><em>This article takes up ideas from earlier in the broadcast: Elephant Conservation in Botswana, Elephant Conservation in Namibia.</em></p> -->
 
       <div>
         <h3>Reconnaissance Africa</h3>
@@ -58,7 +58,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-zambezi/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Zambezi /</font></a>
-          <a class="nav-next" href="../elephant-conservation-angola/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Ghost Elephants in Angola</font></a>
+          <a class="nav-next" href="../elephant-conservation-angola/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Angola</font></a>
         </div>
       </div>
 
