--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -41,12 +41,12 @@
 
       <div>
         <h4 class="letterhead thin">June 2016</h4>
-        <h2 class="scene-one">Elephant Conservation in Kenya</h2>
+        <h2 class="scene-one">Hands Off Elephants in Kenya</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
       </div>
 
       <div>
-        <h3>2016 Ivory Burn, Nairobi</h3>
+        <h3>2016 Ivory Burn&mdash;Nairobi</h3>
         <p>In April, the President of Gabon, together with the President of Kenya, set fire to 105 tons of elephant ivory and more than 1 ton of rhino horn in a dramatic statement against the trade in ivory and products from endangered species. This is believed to be the largest stockpile ever destroyed. Conservationists and journalists who gathered from across the world to witness the event describe pyres that billowed thick plumes of white smoke over yellow flames that consumed the ivory. This was ignited by about twenty thousand litres of jet fuel and oxygen. It was not known how long the burn would last because the burning of such a quantity was unprecedented. The stacks of tusks represented more than six-thousand seven-hundred (6,700) elephants killed for their ivory and three-hundred and forty (340) rhinos killed for their horns, plus endangered animal hides and skins and so on, sandalwood seizures and sacks full of Prunus Africana bark.<sup>&nbsp;[<a class="button" onclick="fn();" title="Zane, 2016">1</a>]</sup></p>
       </div>
 
@@ -70,7 +70,7 @@
       <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       <div>
-        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi stated, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chair of the board Dr Richard Leakey hoped this act of burning their ivory stockpiles would encourage other African countries to support a ban on ivory trade: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta proclaimed that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
+        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi stated, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. The act of burning an ivory stockpile serves as a public statement to discourage international market expectations of a future trade in ivory. KWS chair of the board Dr Richard Leakey hoped this act of burning Kenya's ivory stockpiles would also encourage other African countries to support a ban: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta proclaimed that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
 
       </div>
 
@@ -102,7 +102,7 @@
 
             <p class="linebreak">In April 1989, the President of Kenya, Daniel arap Moi, appointed Kenyan paleoanthropologist Dr Richard Leakey as head of the Wildlife Conservation and Management Department&mdash;the department that was later replaced by <u>Kenya Wildlife Service</u>. Leakey chaired its first board of trustees. Within months of his appointment, backed by political support, Leakey effectively quelled corruption at the department and established well-equipped anti-poaching units in the parks.</p>
 
-            <p class="linebreak">Then, in July of that year, Leakey and then President Moi set fire to twelve tons of tusks&mdash;a stockpile of ivory valued at millions of US dollars. This was a message to the world to end the slaughter. Just months later, in October 1989, at the seventh Conference of the Parties in Lausanne, Switzerland, CITES resolved to ban trade in ivory. Then ivory industries around the world withered, or went underground. The poaching crisis was under control, and elephant populations in Kenya began to rebound.</p>
+            <p class="linebreak">Then, in July of that year, Leakey and then President Moi set fire to twelve tons of tusks&mdash;a stockpile of ivory valued at millions of US dollars. This was a message to the world to end the slaughter. Just months later, in October 1989, in Lausanne, Switzerland, at the seventh CITES Conference of the Parties, the Parties resolved to ban trade in ivory. Then ivory industries around the world withered, or went underground. The poaching crisis was under control, and elephant populations in Kenya began to rebound.</p>
 
             <p class="linebreak">Until 2008&hellip; CITES authorized a one-off sale of ivory stockpiles from four Southern African countries to China and Japan. Ivory markets, all of a sudden legitimized, resurfaced in those Asian countries and a demand for ivory was renewed. Poaching for ivory once again ramped up across Africa, with elephants in Kenya swept up in the slaughter.</p>
 
@@ -123,7 +123,7 @@
 
         <p class="linebreak">Kenya &ndash; in particular the port of Mombasa &ndash; is infamously positioned as a primary point of transit for ivory smuggled out of Africa on trade routes to Asia. The history of this port city gives Kenya a particular responsibility in the international effort to enforce a ban on ivory. While this responsibility is shared by a number of other countries with elephant populations to uphold, or with ivory markets to close down, Kenya will remain complicit, in part, in the endangerment of African elephants until the ivory trafficked through its porous borders and ports is stopped &ndash; and the ivory traffickers are prosecuted.</p>
 
-        <p class="linebreak">More about the history of the ivory trade: <a href="../elephant-conservation/" title="A History of Elephant Conservation">A History of Elephant Conservation</a>.</p>
+        <p class="linebreak">More about the history of the ivory trade: <a href="../history-of-elephants-ivory/" title="A History of Elephant Conservation">A History of Elephant Conservation</a>.</p>
 
       </div>
 
@@ -150,6 +150,7 @@
           <p><font class="color title">Warning</font>: the video includes graphic images.</p>
 
           <h5 class="linebreak">&minus; Close: <a class="color overscore" onclick="toggle_video();">VICE News <em>Elephant Poachers in Kenya</em></a> (2013)</h5>
+          
         </div>
 
         <iframe src="https://www.youtube.com/embed/ygHH40MAL7w" class="video-extra" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -160,8 +161,8 @@
         <h3 class="linebreak">A Direct Response</h3>
         <p>The campaign <em>Hands Off Our Elephants</em> was launched in July 2013 by Paula Kahumbu with her wildlife conservation organization <a href="../../../url/-org/wildlifedirect/" rel="noopener" target="_blank" title="Wildlife Direct">Wildlife Direct</a>. The campaign partnered with civil society, corporations, government agencies and other conservation organizations to unify a nation against its poaching crisis. Margaret Kenyatta, the First Lady of the Republic of Kenya, had become a public patron of the campaign. Dr Paula Kahumbu and <em>Hands Off Our Elephants</em> had generated unprecedented awareness and support for wildlife conservation in Kenya. This ivory burn was a political response to that popular support.</p>
 
-        <!-- Credit where credit is due. -->
         <!-- Eyes in the Courtroom -->
+        <!-- monitored poaching cases in Kenyan courts -->
 
       </div>
 
@@ -182,7 +183,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -200,8 +201,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;2 /</font></a>
-          <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;3</font></a>
+          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch&nbsp;2 /</font></a>
+          <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch&nbsp;4</font></a>
         </div>
       </div>
 
