--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Making of Ella Ch.&nbsp;2</em></a></li>
+      <li class="crumb scene scene-one"><a><em>Making of Ella Ch&nbsp;2</em></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2016</h4>
-        <h2 class="scene-one">Making of Ella Ch.&nbsp;2: Pre-visualization</h2>
+        <h2 class="scene-one">Making of Ella Ch&nbsp;2: Scene</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
       </div>
 
@@ -65,7 +65,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -83,7 +83,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephant Conservation /</font></a>
+          <a class="nav-previous" href="../history-of-elephants-ivory/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephants &ndash; Ivory /</font></a>
           <a class="nav-next" href="../elephant-conservation-kenya/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Kenya</font></a>
         </div>
       </div>
