--- a/scene/two/the-beginning-of-exhibition/index.html
+++ b/scene/two/the-beginning-of-exhibition/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-two logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb btn scene-two"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
-      <li class="crumb scene scene-two"><a><em>The Beginning of Exhibiton</em></a></li>
+      <li class="crumb scene scene-two"><a><em>The Beginning of Exhibiting</em></a></li>
     </ul>
   </nav>
 
@@ -38,21 +38,21 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2023</h4>
-        <h2 class="scene-two">Exhibiton of Art</h2>
+        <h2 class="scene-two">Exhibition of Art</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
       </div>
 
       <div>
-        <h3>The Beginning of Exhibiton</h3>
+        <h3>The Beginning of Exhibiting</h3>
         <p>Article in review.</p>
 
       </div>
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../the-forest-behind-the-trees/" rel="prev"><font class="mobile">/ Prev Article</font><font class="desktop">/ The Forest Behind the Trees</font></a>
-          <!-- <a class="nav-next" href="../siberian-tiger-print/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Siberian Tiger Print</font></a> -->
+          <a class="nav-previous" href="../the-forest-the-trees/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Forest Behind the Trees /</font></a>
+          <a class="nav-next" href="../the-beginning-of-printing/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Beginning of Printing</font></a>
         </div>
       </div>
 
