--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2020</h4>
-        <h2 class="scene-two">The Beginning of Painting</h2>
+        <h2 class="scene-two">The End of Painting</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat</h5>
 
         <p class="linebreak"><em>Enter scene two. Soviet state, 1920. Open with two of the most prolific artists at the time &mdash; partners in business and in marriage Aleksandr Rodchenko and Varvara Stepanova.</em></p>
@@ -88,8 +88,12 @@
 
       </div>
 
-      <div>
+      <div class="quote" id="footnotes">
+        <p class="small"><sup>1</sup> MoMA. Exhibitions, 1998: Aleksandr Rodchenko. <a href="../../../url/moma/rodchenko/" rel="noopener" target="_blank" title="MoMA / Exhibitions / 1998 / Aleksandr Rodchenko">Website&nbsp;Link</a>.</p>
 
+      </div>
+
+      <div class="clear-top">
         <h3 class="linebreak">The Beginning of Painting</h3>
         <p>Red&ndash;yellow&ndash;blue is the primary color model that many will have learned at an early age in art education. In theory, the art color wheel has a harmonious logic. In practice, the purples will blend a bit dark.</p>
 
@@ -238,8 +242,7 @@
 
       </div>
 
-      <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> MoMA. Exhibitons, 1998: Aleksandr Rodchenko. <a href="../../../url/moma/rodchenko/" rel="noopener" target="_blank" title="MoMA / Exhibitons / 1998 / Aleksandr Rodchenko">Website&nbsp;Link</a>.</p>
+      <div class="quote" id="footnotes-2">
         <p class="small"><sup>2</sup> Gamblin. Mineral, modern colors. <a href="../../../url/com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website&nbsp;Link</a>.</p>
         <p class="small"><sup>3</sup> Gamblin. Conservation colors. <a href="../../../url/com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website&nbsp;Link</a>.</p>
         <p class="small"><sup>4</sup> Wikipedia: Magenta. <a href="../../../url/wiki/magenta/" rel="noopener" target="_blank" title="Wikipedia / Magenta">Website&nbsp;Link</a>.</p>
@@ -254,7 +257,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -309,7 +312,7 @@
     }
   };
 
-  function fn() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
+  function fn_2() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
 
 </script>
 
