--- a/scene/two/the-second-chapter/index.html
+++ b/scene/two/the-second-chapter/index.html
@@ -43,7 +43,7 @@
         <h2 class="scene-two">The Second Chapter</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat</h5>
 
-        <p class="linebreak"><em>Continued from <a href="../the-beginning-of-painting/" title="The Beginning of Painting">The Beginning of Painting</a>. The triptych with Pure Red Color, Pure Yellow Color and Pure Blue Color painted by Aleksandr Rodchenko was shown at exhibition in Moscow in September 1921. This was a final, neutral statement on the subject of painting: three monochrome canvases painted without representation. The exhibition was titled 5&times;5&equals;25, and was produced by five Russian Avant-garde artists as a conclusion to the bourgeois practice of painting. For Rodchenko and for the other four artists with like variations on a monochrome canvas, this exhibition marked the end of painting and the beginning of a new chapter&mdash;a search for more constructive forms of art. For example, Rodchenko then turned to graphic art and photography in his commentary on the Soviet regime. For many modern critics, that exhibition in 1921 marked a shift in the history of art, and this marked departure from painting had an indirect influence on Abstract Expressionism in the 1940s and into the 1950s and so on.</em></p>
+        <p class="linebreak"><em>The triptych with Pure Red Color, Pure Yellow Color and Pure Blue Color painted by Aleksandr Rodchenko was shown at exhibition in Moscow in September 1921. This was a final, neutral statement on the subject of painting: three monochrome canvases painted without representation. The exhibition was titled 5&times;5&equals;25, and was produced by five Russian Avant-garde artists as a conclusion to the bourgeois practice of painting. For Rodchenko and for the other four artists with like variations on a monochrome canvas, this exhibition marked the end of painting and the beginning of a new chapter&mdash;a search for more constructive forms of art. For example, Rodchenko then turned to graphic art and photography in his commentary on the Soviet regime. For many modern critics, that exhibition in 1921 marked a shift in the history of art, and this marked departure from painting had an indirect influence on Abstract Expressionism in the 1940s and into the 1950s and so on.</em></p>
 
         <!-- Aleksandra Exter, Liubov Popova, Aleksandr Rodchenko and Varvara Stepanova and Aleksandr Vesnin. -->
         <!-- Abstract Expressionists: namely the likes of Wassily Kandinsky, Mark Rothko and Ad Reinhardt. -->
@@ -60,8 +60,8 @@
       <img alt="" src="https://animathabitat.com/inc/img/~02/type/paratype.rodchenko.002.png" />
       <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, edited and recolored]</p>
 
-      <div>
-        <h3>The Rodchenko Typeface</h3>
+      <div class="clear-top">
+        <h3 class="linebreak">The Rodchenko Typeface</h3>
         <p>The typeface titled <em>Rodchenko</em> was designed in 1996 by Tagir Safayev at ParaType. <em>ParaType</em> was at first a font library published in 1989 by a company called ParaGraph. Nine years later, director of the font department at ParaGraph Emil Yakupov founded the company ParaType with rights to the font library along with the name. The name ParaType itself was derived from a combination of the word &lsaquo; παρά &rsaquo; with <em>type</em>, which can be interpreted as &lsquo;near&rsquo; or &lsquo;available&rsquo; typefaces.<sup>&nbsp;[<a class="button" onclick="fn();" title="ParaType - About">1</a>]</sup></p>
 
         <p class="linebreak">In 1997, the initial typeface design of <em>Rodchenko</em> was licensed to ITC and published as <em>Stenberg</em>, with an Inline style. <em>Rodchenko</em> (typeface, 1996-2002) was maintained at ParaType, appearing slightly more spaced than ITC <em>Stenberg</em> (typeface, 1997). The <em>Rodchenko</em> font family was extended with two lighter weights as well as another condensed style. The geometrical sans serif design &ndash; with caps and small caps only &ndash; was based on the lettering of Constructivist artists in Russia in the 1920s and 1930s. Namely partners Aleksandr Rodchenko and Varvara Stepanova and brothers Vladimir and George Stenberg and so on. The font was made for use in advertising and display typography. ParaType describes the letterforms as made from straight lines only. <em>Totally simplified, this face is perceived as a symbol of Russian Avant-garde.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="ParaType - Fonts">2-3</a>]</sup></p>
@@ -109,8 +109,8 @@
 
       </div>
 
-      <div>
-        <h3>The Second Color</h3>
+      <div class="clear-top">
+        <h3 class="linebreak">The Second Color</h3>
         <p>Font is a matter of functionality, history and style. Typography is a unique design space without content, wherein associations inhere within the letterforms. These associations take hold with time and with a pattern of use. A pattern can become so practiced in a culture that this practice shapes a relationship to the typeface. To begin the second chapter at Animat Habitat, we have designed a second project identity with a pattern of use for lettering and coloring.</p>
 
         <p class="linebreak">Color is a fundamental part of each project identity at Animat Habitat. Each project color is a playful echo of the scene. The second color is <em>Pine</em>. The color green echos the evergreens&mdash;the taiga&mdash;the boreal forest habitat that extends across the northern hemisphere. This represents the land of the Amur tiger, as well as the largest swath of Canadian wilderness south of the tundra.</p>
@@ -143,16 +143,19 @@
 
         <p>High-value cyan, magenta, yellow colors are designed to feature in the print materials for the exhibition. These modern colors repeat the theme&hellip; <em>The beginning of painting.</em> The right angles and the bright colors are a means to highlight the exhibition, to stand out in a noisy marketplace and to stand apart from the Earth tones of wildlife art. In nature, shapes are less exact and colors are more limited in comparison to the clarity of vector graphics and the purity of modern dyes and inks. This contrast between the art on display and the stationary on the side allows for color to remain representational and for the two art forms to appeal to a diverse aesthetic.</p>
 
-        <p class="linebreak">A painting at Animat Habitat begins, like any art studio project, with an idea for a story about wildlife conservation. Each project is designed with medium in mind so that both art and story share a message&mdash;so that the message is clear. For example, this project is an exhibiton of art with themes of Constructivism and nature, and with an oil painting about tiger conservation.</p>
-
-        <p class="linebreak">Also, there are the fine art qualities that shape oil color as a medium and present another unique space for artistic expression. To begin, the use of perspective in art can express three-dimensional space on a two-dimensional plane. The physicality of painting can express a further dimension within this otherwise static visual art. The depth and the weight of each brush stroke can impart an implicit sense of motion. The iterative process of figure on ground &ndash; dark on light and then light on dark and so on &ndash; appears as a record of movement by the painter in front of the canvas in space and in time. Oil color in this way can present as a dynamic medium. The fine art of painting carries on at Animat Habitat.</p>
-
       </div>
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>If you do a painting with five strokes instead of ten, you can make the painting sing.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Tyrus Wong, <em>Tyrus</em> (documentary film, 2015)</font></h4>
 
         <!-- If there is any kind of magic in this world, it exists in the attempt of understanding someone sharing something. -->
+
+      </div>
+
+      <div>
+        <p>A painting at Animat Habitat begins, like any art studio project, with an idea for a story about wildlife conservation. Each project is designed with medium in mind so that both art and story share a message&mdash;so that the message is clear. For example, this project is an exhibition of art with themes of Constructivism and nature, and with an oil painting about tiger conservation.</p>
+
+        <p class="linebreak">Also, there are the fine art qualities that shape oil color as a medium and present another unique space for artistic expression. To begin, the use of perspective in art can express three-dimensional space on a two-dimensional plane. The physicality of painting can express a further dimension within this otherwise static visual art. The depth and the weight of each brush stroke can impart an implicit sense of motion. The iterative process of figure on ground &ndash; dark on light and then light on dark and so on &ndash; appears as a record of movement by the painter in front of the canvas in space and in time. Oil color in this way can present as a dynamic medium. The fine art of painting carries on at Animat Habitat.</p>
 
       </div>
 
@@ -164,7 +167,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -183,7 +186,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../the-beginning-of-painting/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Beginning of Painting /</font></a>
-          <a class="nav-next" href="../siberian-tiger-project/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Siberian Tiger Project</font></a>
+          <a class="nav-next" href="../tiger-conservation-siberia/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Tiger Conservation in Siberia</font></a>
         </div>
       </div>
 
