--- a/canon/index.html
+++ b/canon/index.html
@@ -37,39 +37,8 @@
     </ul>
   </nav>
 
-  <header>
-    <div class="quote text-center">
-      <h1 class="title"><a href="../" title="Animat Habitat"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></a></h1>
-      <h3>Organizationem Animare Fera Animalia</h3>
-
-      <h5 class="title">Est. 2015</h5>
-
-      <div class="clear-bottom desktop-feature">
-        <div class="clear-bottom ptych-center">
-          <div class="clear-bottom">
-            <div class="quote clear-bottom clear-top">
-              <img alt="OAFA Crest (Light) &copy; Animat Habitat, 2015" src="../inc/img/canon/oafa.crest.1.2.light.png" />
-
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </header>
-
   <section>
     <article>
-      <div>
-        <p><em>A story communicates an idea. A story relates another perspective. A story exists within a medium and, nonetheless, the medium manifests a window back into our world.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Une histoire communique une id&eacute;e. Une histoire raconte une autre perspective. Une histoire existe dans un m&eacute;dium et, n&eacute;anmoins, le m&eacute;dium manifeste une perspective de retour dans notre monde.</em></font></p>
-
-        <p class="linebreak">Storytelling at Animat Habitat is likewise a reflection of the way our world once was and &ndash; in some small spaces &ndash; still is wild. Scenes at Animat Habitat are however written in context of challenges we face today and in future&mdash;in a moment in human history when we have clear cause and effect on the state of the natural world. We the people enact our story together. <em>Action!</em>&nbsp;<font class="fr">&nbsp;&#92;&nbsp;La narration chez Animat Habitat est &eacute;galement le reflet de la fa&ccedil;on dont notre monde &eacute;tait autrefois et &ndash; dans certains petits espaces &ndash; est toujours sauvage. Les sc&egrave;nes chez Animat Habitat sont cependant &eacute;crit dans le contexte des d&eacute;fis auxquels nous sommes confront&eacute;s aujourd'hui et &agrave; l'avenir &mdash; &agrave; un moment de l'histoire humaine o&ugrave; nous avons des causes et des effets clairs sur l'&eacute;tat du monde naturel. Nous, le peuple, cr&eacute;ons notre histoire ensemble. <em>Action&nbsp;!</em></font></p>
-
-        <p class="linebreak">The mission at Animat Habitat is to redirect a shifting baseline. This graphic art movement aims to change the way we look at wildlife, starting with elephants and the Okavango Delta watershed. When one person is inspired to take action to protect wildlife, the world becomes a little better and if a thousand people are inspired to do the same, the world is changed.<font class="fr">&nbsp;&#92;&nbsp;La mission chez Animat Habitat est de rediriger une base de r&eacute;f&eacute;rence d&eacutecaleant. Ce mouvement d'art graphique vise &agrave; changer la fa&ccedil;on dont nous regardons la nature, &agrave; commencer par les &eacute;l&eacute;phants et le bassin versant du delta de l'Okavango. Lorsqu'une personne est inspir&eacute;e &agrave; agir pour prot&eacute;ger la nature, le monde devient un peu meilleur et si un millier de personnes sont inspir&eacute;es &agrave; faire de m&ecirc;me, le monde est chang&eacute;.</font></p>
-
-      </div>
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
@@ -83,10 +52,24 @@
         </div>
 
       </div>
-      <p class="text-right gutter-side">Animat Habitat <em>Canon</em> 1.0, p. 1-2</p>
+      <p class="text-right gutter-side">Animat Habitat <em>Canon</em> 1.0, p&nbsp;1-2</p>
 
-      <div>
-        <p>Saving the wild places and the animals that live in them is a story that we must all want to be a part of. This is the story that Animat Habitat is established to tell. Scene one: <em>White Elephant</em> invites people to change the way we look at elephants in Africa. Animat Habitat recognizes that conservation is mainly about people, and getting people to work together. This is a human story, and our story concerns the natural world. And so, the story at Animat Habitat is about giving the wild animals a voice in an increasingly developed world. This mark is a symbol for scenes in wildlife art, where people can make a meaningful connection with the natural world. Animat Habitat <em>canon</em> is presented here to welcome people like you behind the scenes of this not-for-profit art studio, so that when this mark appears in a publication, there is a reminder of a shared passion for the wild and for wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Sauvegarder les animaux sauvages et les endroits o&ugrave; ils vivent est une une histoire &agrave; laquelle nous devons tous vouloir participer. C’est l’histoire Animat Habitat est entrain de raconter. Sc&egrave;ne un&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> nous invite tous sur un voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable. Animat Habitat reconna&icirc;t que la conservation s'agit principalement d’&ecirc;tres humains, et d’amener les personnes &agrave; travailler ensemble. Il s'agit d'une histoire humaine, et notre histoire concerne la nature. Et donc, l'histoire chez Animat Habitat consiste &agrave; donner une voix aux animaux sauvages dans un monde de plus en plus d&eacute;velopp&eacute;. Cette marque est un symbole pour les sc&egrave;nes d'art de la nature, o&ugrave; vous pouvez &eacute;tablir un lien significatif avec le monde naturel. Le canon Animat Habitat est pr&eacute;sent&eacute;e ici pour accueillir des personnes comme vous dans les coulisses de ce studio d'art &agrave; but non lucratif, afin que lorsque cette marque appara&icirc;t dans un publication, vous vous souvenez d'une passion commune pour la nature et pour l'art de la nature.</font></p>
+      <div id="presskit">
+
+        <h4 class="letterhead thin">September<font class="fr">&nbsp;&#92;&nbsp;Septembre</font> 2015</h4>
+        <h2 class="scene-one">Canon</h2>
+        <h5 class="author">Press secretary at<font class="fr">&nbsp;&#92;&nbsp;Secr&eacute;taire de presse chez</font> Animat Habitat</h5>
+
+        <ul class="linebreak">
+          <li>Animat Habitat canon: <a href="../url/drive/canon-1-1-72/" title="OAFA Canon 1.1">PDF copy</a> (6,175 KB)<font class="fr">&nbsp;&#92;&nbspcopie num&egrave;rique</font></li>
+          <li>Animat Habitat canon: <a href="../url/drive/canon-1-1-s/" title="OAFA Canon 1.1">PDF archive</a> (539 KB)<font class="fr">&nbsp;&#92;&nbsp;copie num&egrave;rique prot&eacute;g&eacute;e</font></li>
+          <li>Animat Habitat press kit: <a href="../url/drive/mark-1/" title="OAFA Mark">ZIP archive</a> (261 KB)<font class="fr">&nbsp;&#92;&nbsp;dossier de presse prot&eacute;g&eacute;</font></li>
+        </ul>
+
+        <h3 class="linebreak">Our Story<font class="fr">&nbsp;&#92;&nbsp;Notre histoire</font></h3>
+        <p><em>A story communicates an idea, relates another perspective and, in any case, exists within a medium that manifests a window back into our world.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Une histoire communique une id&eacute;e, raconte une autre perspective et, dans tous les cas, existe dans un m&eacute;dium qui manifeste une fen&ecirc;tre encadrant une vue de retour sur notre monde.</em></font></p>
+
+        <p class="linebreak">Each scene in the story at Animat Habitat is likewise a reflection of the way our world once was and &ndash; in some small spaces &ndash; still is wild. Scenes at Animat Habitat explore the vestiges of wilderness, from a modern perspective, and within a moment in human history when we the people have clear causes and effects on the state of the natural world. The core idea at Animat Habitat is to redirect a shifting baseline&mdash;to change the way we look at wildlife, starting with African savanna elephants in the Kalahari basin in Angola, Botswana and Namibia.<font class="fr">&nbsp;&#92;&nbsp;Chaque sc&egrave;ne de l'histoire chez Animat Habitat est &eacute;galement le reflet de la fa&ccedil;on dont notre monde &eacute;tait autrefois et &ndash; dans certains petits espaces &ndash; est toujours sauvage. Les sc&egrave;nes chez Animat Habitat explorent les vestiges de la nature, d'un point de vue moderne, et &agrave; un moment de l'histoire humaine o&ugrave; nous avons des causes et des effets clairs sur l'&eacute;tat du monde naturel. L'id&eacute;e centrale chez Animat Habitat est de rediriger une base de r&eacute;f&eacute;rence d&eacute;caleant&mdash;de changer la fa&ccedil;on dont nous regardons la nature, &agrave; commencer par les &eacute;l&eacute;phants de savanne africaine dans le bassin Kalahari en Angola, au Botswana et en Namibie.</font></p>
 
       </div>
 
@@ -101,16 +84,31 @@
 
         </div>
       </div>
-      <p class="text-right gutter-side">Animat Habitat <em>Canon</em> 1.0, p. 134-5</p>
+      <p class="text-right gutter-side">Animat Habitat <em>Canon</em> 1.0, p&nbsp;134-5</p>
 
       <div>
-        <p>Symbols can infuse meaning in a shape. Shapes can convey more than balance or directionality. For example, the iconic rock formation: &ldquo;Pride Rock&rdquo; in the film <em>The Lion King</em> (1994) is home of the lions, it is shown basked in sunlight, it is shown weathered through thunderstorms, and it is where the animals in this animated corner of Africa come together in ceremony of the circle of life. Symbology can give form to the representation of a feeling&mdash;a deeper meaning&mdash;an emotion in the moment. In this way, &ldquo;Pride Rock&rdquo; represents a connection that Animat Habitat has with the wild and with wildlife art. This connection is at the core of a bigger picture at the studio to redirect a baseline for the conservation of nature. We the people have long-since become the driving influence on this Earth. The time has long-since come to use our unique capability for the good of the planet&mdash;to take our place in <em>the circle of life</em>.<font class="fr">&nbsp;&#92;&nbsp;Les symboles peuvent donner une signification &agrave; une forme. Les formes peuvent transmettre plus que l’&eacute;quilibre ou la directivit&eacute;. Par exemple, la formation rocheuse embl&eacute;matique&nbsp; dans le film <em>Le Roi Lion</em> (&nbsp;1994&nbsp;) abrite les lions, elle est vue baign&eacute;e de soleil et expos&eacute;e aux orages, et elle est l&agrave; o&ugrave; les animaux de ce coin anim&eacute; de l’Afrique se r&eacute;unissent lors de la c&eacute;r&eacute;monie du cercle de la vie. La symbologie peut donner forme &agrave; la repr&eacute;sentation d'un sentiment &mdash; une &eacute;motion &mdash; une signification d'un moment. De cette fa&ccedil;on, cette formation rocheuse embl&eacute;matique repr&eacute;sente un lien qu'Animat Habitat entretient avec la nature et avec l'art de la nature. Cette connexion est au c&oelig;ur des objectifs artistiques et philanthropiques au studio pour rediriger une base de r&eacute;f&eacute;rence pour la conservation de la nature. Nous, le peuple, sommes devenus depuis longtemps l'influence d&eacute;terminante sur cette Terre. Le temps est venu depuis longtemps d'utiliser notre capacit&eacute; d'agir pour le bien de la plan&egrave;te&nbsp;&mdash;&nbsp;de prendre place dans <em>le cercle de la vie</em>.</font></p>
+        <h3 class="linebreak">Our Studio<font class="fr">&nbsp;&#92;&nbsp;Notre studio</font></h3>
+        <p><em>When one person is inspired to take action to protect wildlife, the world becomes a little better and if a thousand people are inspired to do the same, one day, the world is changed.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Lorsqu'une personne est inspir&eacute;e &agrave; agir pour prot&eacute;ger la nature, le monde devient un peu meilleur et si un millier de personnes sont inspir&eacute;es &agrave; faire de m&ecirc;me, un jour, le monde est chang&eacute;.</em></font></p>
 
-        <ul class="linebreak">
-          <li>Animat Habitat canon: <a href="../url/drive/canon-1-1-72/" title="OAFA Canon 1.1">PDF copy</a> (6,175 KB)<font class="fr">&nbsp;&#92;&nbspcopie num&egrave;rique</font></li>
-          <li>Animat Habitat canon: <a href="../url/drive/canon-1-1-s/" title="OAFA Canon 1.1">PDF archive</a> (539 KB)<font class="fr">&nbsp;&#92;&nbsp;copie num&egrave;rique prot&eacute;g&eacute;e</font></li>
-          <li>Animat Habitat press kit: <a href="../url/drive/mark-1/" title="OAFA Mark">ZIP archive</a> (261 KB)<font class="fr">&nbsp;&#92;&nbsp;dossier de presse prot&eacute;g&eacute;</font></li>
-        </ul>
+        <!-- We the people enact our story together. <em>Action!</em> -->
+        <!-- Nous, le peuple, cr&eacute;ons notre histoire ensemble. <em>Action&nbsp;!</em> -->
+
+        <p class="linebreak">Saving the wild places and the animals that live in them is a story that we must all want to be a part of. This is the story that Animat Habitat is established to tell. Scene one: <em>White Elephant</em> invites people to change the way we look at African savanna elephants.<font class="fr">&nbsp;&#92;&nbsp;Sauvegarder les animaux sauvages et les endroits o&ugrave; ils vivent est une une histoire &agrave; laquelle nous devons tous vouloir participer. C’est l’histoire Animat Habitat a pour mission de raconter. Sc&egrave;ne un&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> nous invite tous &agrave; changer la fa&ccedil;on dont nous regardons les &eacute;l&eacute;phants de la savane africaine.</font></p>
+
+        <p class="linebreak">Animat Habitat recognizes that conservation is mainly about people, and getting people to work together. This is a human story, and our story concerns the natural world. And so, the story at Animat Habitat is about giving the wild animals a voice in an increasingly developed world.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat reconna&icirc;t que la conservation s'agit principalement d’&ecirc;tres humains, et d’amener les personnes &agrave; travailler ensemble. Il s'agit d'une histoire humaine, et notre histoire concerne la nature. Et donc, l'histoire chez Animat Habitat consiste &agrave; donner une voix aux animaux sauvages dans un monde de plus en plus d&eacute;velopp&eacute;.</font></p>
+
+      </div>
+
+      <div class="quote clear-bottom clear-top">
+        <div class="quote clear-bottom clear-top">
+          <img alt="OAFA Crest (Light) &copy; Animat Habitat, 2015" src="../inc/img/canon/oafa.crest.1.2.light.png" />
+
+        </div>
+      </div>
+
+      <div>
+        <h3 class="linebreak">Our Mark<font class="fr">&nbsp;&#92;&nbsp;Notre marque</font></h3>
+        <p>This mark is a symbol for scenes in wildlife art &ndash; digital art experiences and traditional art exhibitions &ndash; where people can make a meaningful connection with the natural world. Animat Habitat <em>canon</em> is presented here to welcome people like you behind the scenes of this not-for-profit art studio, so that when this mark appears in print, there is a reminder of a shared passion for the wild and for wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Cette marque est un symbole pour les sc&egrave;nes d'art de la nature, o&ugrave; vous pouvez &eacute;tablir un lien significatif avec le monde naturel. Le canon Animat Habitat est pr&eacute;sent&eacute;e ici pour accueillir des personnes comme vous dans les coulisses de ce studio d'art &agrave; but non lucratif, afin que lorsque cette marque appara&icirc;t comme impression, vous vous souvenez d'une passion commune pour la nature et pour l'art de la nature.</font></p>
 
         <div class="triptych ptych-fixed">
           <div class="logo ptych-left"><img alt="OAFA Mark (Light) &copy; Animat Habitat, 2015" class="auto" src="../inc/svg/oafa.mark.1.1.1200.light.svg" /></div>
@@ -118,7 +116,16 @@
           <div class="logo ptych-right"><img alt="OAFA Mark (Dune) &copy; Animat Habitat, 2015" class="auto" src="../inc/svg/oafa.mark.1.1.1200.one.svg" /></div>
 
         </div>
-        <p class="text-right gutter-side">Animat Habitat <em>Mark</em> (Light, Dark, One)</p>
+        <p class="text-right gutter-side lineend">Animat Habitat <em>Mark</em> (Light, Dark, One)</p>
+
+        <!-- <h3 class="linebreak">Organizationem Animare Fera Animalia</h3> -->
+        <p>Symbols can infuse meaning in a shape, and shapes can convey more than balance or directionality. The rock formation: &ldquo;Pride Rock&rdquo; in the film <em>The Lion King</em> (1994) is the symbolic home of the lions. It is shown basked in sunlight, it is shown weathered through thunderstorms, and it is where the animals in this animated corner of Africa come together in celebration of the circle of life. Symbology can give form to a feeling&mdash;an emotion&mdash;a deeper meaning. In this way, &ldquo;Pride Rock&rdquo; represents a connection that Animat Habitat has with the wild and with wildlife art. This connection is the core idea at the studio, to redirect a baseline for the conservation of nature.<font class="fr">&nbsp;&#92;&nbsp;Les symboles peuvent donner une signification &agrave; une forme, et les formes peuvent transmettre plus que l’&eacute;quilibre ou la directivit&eacute;. La formation rocheuse dans le film <em>Le Roi Lion</em> (&nbsp;1994&nbsp;) est la patrie embl&eacute;matique&nbsp; des lions. Elle est vue baign&eacute;e de soleil, elle est expos&eacute;e aux orages, et elle est l&agrave; o&ugrave; les animaux de ce coin anim&eacute; de l’Afrique se r&eacute;unissent lors de la c&eacute;r&eacute;monie du cercle de la vie. La symbologie peut donner forme &agrave; une &eacute;motion &mdash; un sentiment &mdash; une signification d'un moment. De cette fa&ccedil;on, cette formation rocheuse repr&eacute;sente un lien qu'Animat Habitat entretient avec la nature et avec l'art de la nature. Cette connexion est l'id&eacute;e centrale au studio, pour rediriger une base de r&eacute;f&eacute;rence pour la conservation de la nature.</font><p>
+
+        <p class="linebreak"><em>We the people have long-since become the driving influence on this Earth. The time has long-since come to use our unique capability for the good of the planet&mdash;to take our place in the circle of life.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Nous, le peuple, sommes devenus depuis longtemps l'influence d&eacute;terminante sur cette Terre. Le temps est venu depuis longtemps d'utiliser notre capacit&eacute; d'agir pour le bien de la plan&egrave;te&nbsp;&mdash;&nbsp;de prendre place dans le cercle de la vie.</em></font></p>
+
+        <ul class="linebreak">
+          <li>Animat Habitat &ndash; <a class="overscore" onclick="to();" title="OAFA Mark">Press Kit</a><font class="fr">&nbsp;&#92;&nbsp;Dossier de presse</font></li>
+        </ul>
 
       </div>
 
@@ -170,6 +177,8 @@
       toggle_lang = 0;
     }
   };
+
+  function to() { document.querySelector( "#presskit" ).scrollIntoView({ behavior: 'smooth' }); };
 
 </script>
 
