--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Book of Ella Ch.&nbsp;2 &ndash; P.&nbsp;1</em></a></li>
+      <li class="crumb scene scene-one"><a><em>Book of Ella Ch&nbsp;2</em></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2015</h4>
-        <h2 class="scene-one">Book of Ella Ch.&nbsp;2: Comic</h2>
+        <h2 class="scene-one">Book of Ella Ch&nbsp;2: Comic</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat</h5>
 
         <p class="linebreak"><em>A visual story represents time. Comics as a visual medium have a unique visual language that attempts to represent the other senses as well. Comic books are a great way to tell unique stories because a singular artistic voice can have choice over every moment, frame, image, letter and flow. Animat Habitat aims to honor these traditions of visual storytelling while leveraging the technology of today to explore new possibilities for the comic art form. For this, we reconsider interaction design in a visual story. We examine the requisite actions that a reader must take to advance through a story. And we weigh the implication that each action may have on the story on behalf of the reader.</em></p>
@@ -82,7 +82,7 @@
       </div>
 
       <!-- <div class="color quote">
-        <p><b class="color">&ldquo;</b>To deal with the capture or encapsulation of these events in the flow of the narrative, they must be broken into sequenced segments. These segments are called panels or frames. They do not correspond exactly to cinematic frames. They are part of the creative process, rather than a result of the technology. [&hellip;] The task then is to arrange the sequence of events (or pictures) so as to bridge the gaps in action. Given these, the reader may fill in the intervening events from experience. [The panel] is used by the artist to capture or freeze one segment in what is in reality an uninterrupted flow of action. [&hellip;] It is in this encapsulation that the artist employs the skill of narration. The rendering of elements within a frame, the arrangement of the images therein and their relation to and association with the other images in the sequence are the basic grammar from which the narrative is constructed.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Will Eisner. (2008) <em>Comics and Sequential Art: Principles and Practices from the Legendary Cartoonist</em>, p. 39 - 40. W. W. Norton &amp; Co. Inc.</font></p>
+        <p><b class="color">&ldquo;</b>To deal with the capture or encapsulation of these events in the flow of the narrative, they must be broken into sequenced segments. These segments are called panels or frames. They do not correspond exactly to cinematic frames. They are part of the creative process, rather than a result of the technology. [&hellip;] The task then is to arrange the sequence of events (or pictures) so as to bridge the gaps in action. Given these, the reader may fill in the intervening events from experience. [The panel] is used by the artist to capture or freeze one segment in what is in reality an uninterrupted flow of action. [&hellip;] It is in this encapsulation that the artist employs the skill of narration. The rendering of elements within a frame, the arrangement of the images therein and their relation to and association with the other images in the sequence are the basic grammar from which the narrative is constructed.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Will Eisner. (2008) <em>Comics and Sequential Art: Principles and Practices from the Legendary Cartoonist</em>, p&nbsp;39 - 40. W. W. Norton &amp; Co. Inc.</font></p>
       </div> -->
 
       <img alt="Calvin and Hobbes &ndash; snow art." src="https://animathabitat.com/inc/img/~01/comic/~bill-watterson/calvin-and-hobbes.snow-art.2.jpg" />
@@ -123,7 +123,17 @@
       <img alt="Calvin and Hobbes &ndash; snow art." src="https://animathabitat.com/inc/img/~01/comic/~bill-watterson/calvin-and-hobbes.snow-art.3.jpg" />
       <p class="gutter-side text-right"><em>Calvin and Hobbes</em> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
-      <div>
+      <div class="clear">
+
+        <div class="quote" id="footnotes">
+
+          <p class="small"><sup>1</sup> The snowmen and other snow art is from the last great newspaper comic: <em>Calvin and Hobbes</em>, created by Bill Watterson. The daily comic strip was syndicated from November 1985 to December 1995, and is commonly cited as &ldquo;the last great newspaper comic&rdquo;. <a href="../../../url/www/calvinandhobbes/" rel="noopener" target="_blank" title="Bill Watterson / Calvin and Hobbes">Website&nbsp;Link</a></p>
+
+        </div>
+
+      </div>
+
+      <div class="clear-top">
         <h3 class="linebreak">A Comic Future</h3>
         <p><em>Bottom of the Ninth</em>&mdash;an app with an animated comic book, published in 2012 by Ryan Woodward&mdash;was released in a moment when Apple iPhone and iPad were pervading popular culture. Phone and tablet interfaces, already in constant flux, were in a systematic transition away from a philosophy of skeuomorphic design.</p>
 
@@ -143,16 +153,20 @@
         </div>
 
       </div>
-      <p class="gutter-side text-right"><em>Bottom of the Ninth</em> (2012) p. 10-11 &copy; Ryan Woodward [<a href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" rel="noopener" target="_blank" title="Ryan Woodward / Bottom of the Ninth">ryanwoodwardart.com</a>]</p>
+      <p class="gutter-side text-right"><em>Bottom of the Ninth</em> (2012) p&nbsp;10-11 &copy; Ryan Woodward [<a href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" rel="noopener" target="_blank" title="Ryan Woodward / Bottom of the Ninth">ryanwoodwardart.com</a>]</p>
 
       <div>
         <p>As an early innovation in this area, <em>Bottom of the Ninth</em> (app, 2012) experimented with audio and video as temporal phenomena within a digital comic. The app cycles through a mix of background music, foley effects and dialogue and so on. This combination helps to demonstrate that audio in an interactive context is most effective when layered in ambiguity. When audio is modulated, then sound can play a part in a system of feedback to encourage and reinforce interaction. The app similarly uses a collage of images, image sequences and video clips and so on. The combination of image formats helps to demonstrate that video is likewise most effective when modulated and fitted within a system of interaction.</p>
 
         <p class="linebreak">An alternate example of an app with an interactive visual story is <em>Device 6</em>&mdash;a &ldquo;surreal thriller&rdquo; in which the written word is the map, published in 2013 by Simon Flesser. This app appears less like a traditional comic, and is not based on a comic. This is the point. This app helps to demonstrate the capacity of the screen as a dimension for storytelling. The typographic narrative turns and breaks with the events as written in plain text. Audio remains ambiguous and only comes into focus at points of inflection in the story, which serves as a cue for attention &ndash; or interaction &ndash; along the way.</p>
+
       </div>
 
-      <img alt="Device 6 &ndash; screen 05. (2013) &copy; Simogo" src="https://animathabitat.com/inc/img/~01/comic/~simogo/device-6.screen.5.jpg" />
-      <p class="gutter-side text-right"><em>Device 6</em> screen-05 (2013) &copy; <a href="../../../url/www/simogo-device-6/" rel="noopener" target="_blank" title="Simon Flesser / Device 6">Simon Flesser</a></p>
+      <div class="clear">
+        <img alt="Device 6 &ndash; screen 05. (2013) &copy; Simogo" src="https://animathabitat.com/inc/img/~01/comic/~simogo/device-6.screen.5.jpg" />
+        <p class="gutter-side text-right"><em>Device 6</em> screen-05 (2013) &copy; Simon Flesser [<a href="../../../url/www/simogo-device-6/" rel="noopener" target="_blank" title="Simon Flesser / Device 6">simogo.com</a>]</p>
+
+      </div>
 
       <div>
         <p>Once upon a time&hellip; In comic books, the requisite action that a reader must take to advance through a story was as simple as turning a page. In the digital space, however, this interaction may now default to pinch-to-zoom and swipe-to-pan or tilt or track and so on. This approach aims to appropriate an interactive language that is inherent to the technology. For digital comics, this means to resolve the misappropriation of replica page-turns as well as the misappropriation of a click-to-play interface as the standard for video playback. The objective is to integrate audio and video elements into each moment of a visual story as outlined in a comic book page layout or panel layout, which is in and of itself open to reinterpretation.</p>
@@ -163,17 +177,10 @@
 
         <p class="linebreak"><em>Here, somewhere in this mixed medium of an augmented reality comic book is where we let the development of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><em>White Elephant</em></a> roam free.</em></p>
 
-        <p class="linebreak"><em>Continue to <a href="../book-of-ella-3-2/">Chapter 2 &ndash; Page 2</a>.</em></p>
-
       </div>
 
-      <div class="clear">
-
-        <div class="quote" id="footnotes">
-
-          <p class="small"><sup>1</sup> The snowmen and other snow art is from the last great newspaper comic: <em>Calvin and Hobbes</em>, created by Bill Watterson. The daily comic strip was syndicated from November 1985 to December 1995, and is commonly cited as &ldquo;the last great newspaper comic&rdquo;. <a href="../../../url/www/calvinandhobbes/" rel="noopener" target="_blank" title="Bill Watterson / Calvin and Hobbes">Website&nbsp;Link</a></p>
-
-        </div>
+      <div>
+        <p><em>Continue to Book of Ella Ch&nbsp;3: <a href="../book-of-ella-3/">Comic Panel</a>.</em></p>
 
       </div>
 
@@ -185,7 +192,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -203,8 +210,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-        <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch.&nbsp;1 /</font></a>
-          <a class="nav-next" href="../book-of-ella-2-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;2 &ndash; P.&nbsp;2</font></a>
+        <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch&nbsp;1 /</font></a>
+          <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch&nbsp;3</font></a>
         </div>
       </div>
 
