--- a/scene/one/elephant-conservation-namibia/index.html
+++ b/scene/one/elephant-conservation-namibia/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">1</a></li>
-      <li class="crumb scene scene-one"><a><em>The Last Elephants in Caprivi</em></a></li>
+      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Namibia</em></a></li>
     </ul>
   </nav>
 
@@ -49,7 +49,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-botswana/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Corridors in Botswana /</font></a>
+          <a class="nav-previous" href="../elephant-conservation-botswana/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Botswana /</font></a>
           <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Reconnaissance in Kavango</font></a>
         </div>
       </div>
