--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -33,7 +33,7 @@
       <li class="crumb scene-one logo"><a href="../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb scene scene-one"><a><em>White Elephant</em></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States.">
+      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America.">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
         &nbsp;<font class="currency-symbol">&#36;</font></a>
@@ -222,95 +222,95 @@
 
   </div>
 
-  <section class="single">
+  <section>
     <article>
       <div class="project-broadcast quote">
 
-        <!-- <h3><a href="technology-ar-kit/"><font class="scene-one">Where is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <!-- <h3><a href="technology-ar-kit/"><font class="scene-one title">Where is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch.&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one title">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-angola/"><font class="scene-one">Ghost Elephants in Angola</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-angola/"><font class="scene-one title">Elephant Conservation in Angola</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-kavango/"><font class="scene-one">Reconnaissance in Kavango</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-kavango/"><font class="scene-one title">Reconnaissance in Kavango</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-zambezi/"><font class="scene-one">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-zambezi/"><font class="scene-one title">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-namibia/"><font class="scene-one">The Last Elephants in Caprivi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-namibia/"><font class="scene-one title">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-botswana/"><font class="scene-one">Elephant Corridors in Botswana</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-botswana/"><font class="scene-one title">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary-2/"><font class="scene-one">Wildlife Documentary &ndash; Picture</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="technology-documentary-2/"><font class="scene-one title">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-amboseli/"><font class="scene-one">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-amboseli/"><font class="scene-one title">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-nairobi/"><font class="scene-one">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-nairobi/"><font class="scene-one title">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary-big-tuskers/"><font class="scene-one">Big Tuskers Documentary</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="technology-documentary-big-tuskers/"><font class="scene-one title">Big Tuskers Documentary</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary/"><font class="scene-one">Wildlife Documentary &ndash; Motion</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="technology-documentary/"><font class="scene-one title">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-charter/"><font class="scene-one">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-charter/"><font class="scene-one title">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-anatomy/"><font class="scene-one">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-anatomy/"><font class="scene-one title">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary-lens/"><font class="scene-one">Wildlife Cinematography</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <h3><a href="technology-documentary-lens/"><font class="scene-one title">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-history/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-history/"><font class="scene-one title">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch.&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella-3/"><font class="scene-one title">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch.&nbsp;3: Color</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-4/"><font class="scene-one title">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-kenya/"><font class="scene-one">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-kenya/"><font class="scene-one title">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch.&nbsp;2: Preview</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella-2/"><font class="scene-one title">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation/"><font class="scene-one">A History of Elephant Conservation</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-ivory/"><font class="scene-one title">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-2-2/"><font class="scene-one">Book of Ella Ch.&nbsp;2: Comic P.&nbsp;2</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-3/"><font class="scene-one title">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-2/"><font class="scene-one">Book of Ella Ch.&nbsp;2: Comic P.&nbsp;1</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-2/"><font class="scene-one title">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch.&nbsp;1: Cover Story</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella/"><font class="scene-one title">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="reference-2/"><font class="scene-one title">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference/"><font class="scene-one">Reference Art &ndash; History</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="reference/"><font class="scene-one title">Reference Art &ndash; History</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-africa/"><font class="scene-one">Elephant Conservation in Africa</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-africa/"><font class="scene-one title">Elephant Conservation in Africa</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-ar/"><font class="scene-one">What is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <h3><a href="technology-ar/"><font class="scene-one title">Augmented Reality Application</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch.&nbsp;1: Source</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella/"><font class="scene-one title">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
@@ -365,6 +365,9 @@
 
       <p class="linebreak small"><font class="title">Tolstoy</font></p>
       <p class="small"><font class="small">Big Life Foundation &ndash;&nbsp;Amboseli (c.1971-2022)</font></p>
+
+      <p class="linebreak small"><font class="title">Monsoon</font></p>
+      <p class="small"><font class="small">Save the Elephants &ndash;&nbsp;Samburu (c.1960-2022)</font></p>
 
     </div>
 
