--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Making of Ella Ch.&nbsp;3</em></a></li>
+      <li class="crumb scene scene-one"><a><em>Making of Ella Ch&nbsp;3</em></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2017</h4>
-        <h2 class="scene-one">Making of Ella Ch.&nbsp;3: Elephant</h2>
+        <h2 class="scene-one">Making of Ella Ch&nbsp;3: Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
 
         <p class="linebreak"><em>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</em></p>
@@ -56,16 +56,16 @@
 
       </div>
 
-      <img alt="White Elephant storyboard p. 8-9. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.8-9.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p. 8-9. (2015)</p>
+      <img alt="White Elephant storyboard p&nbsp;8-9. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.8-9.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p&nbsp;8-9. (2015)</p>
 
       <div>
         <p>A lot of the character animation is able to reference documentary film and stock footage. A little sequence in the story steps outside of the reference material. The more complex and, in this case, less natural sequences of animation start as sketches in a storyboard. Here is Ella's dance in the clouds.</p>
 
       </div>
 
-      <img alt="White Elephant storyboard p. 9-12. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.9-12.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p. 9-12. (2015)</p>
+      <img alt="White Elephant storyboard p&nbsp;9-12. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.9-12.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p&nbsp;9-12. (2015)</p>
 
       <div>
         <p>Pencil and paper to start the visual development of a visual story. Here is a pencil drawing of Ella after the storm.</p>
@@ -102,7 +102,7 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes:</h3>
+            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
             <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
 
           </div>
@@ -120,8 +120,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch.&nbsp;3 /</font></a>
-          <a class="nav-next" href="../elephant-history/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Preface</font></a>
+          <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch&nbsp;4 /</font></a>
+          <a class="nav-next" href="../history-of-elephants/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Preface</font></a>
         </div>
       </div>
 
