--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -261,16 +261,16 @@
     <article>
       <div class="quote">
 
-        <!-- <h3><a href="siberian-tiger-print/"><font class="scene-two">Siberian Tiger Print</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-printing/"><font class="scene-two">The Beginning of Printing</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="the-beginning-of-exhibition/"><font class="scene-two">The Beginning of Exhibition</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="the-beginning-of-exhibiting/"><font class="scene-two">The Beginning of Exhibiting</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="the-forest-behind-the-trees/"><font class="scene-two">The Forest Behind the Trees</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="siberian-tiger-project/"><font class="scene-two">Siberian Tiger Project</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="tiger-conservation-siberia/"><font class="scene-two">Tiger Conservation in Siberia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="the-second-chapter/"><font class="scene-two">The Second Chapter</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
