--- a/societas/r/index.html
+++ b/societas/r/index.html
@@ -42,7 +42,7 @@
       <div class="clear" id="register" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Behind the scenes<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses</font></h3>
+          <h3 class="letterhead">Behind the Scenes<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses</font></h3>
           <p>Register for membership behind the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la nature.</font></p>
 
         </div>
